--- a/OpenAPI/Templates/controller.mustache
+++ b/OpenAPI/Templates/controller.mustache
@@ -6,8 +6,8 @@ using Microsoft.AspNetCore.Mvc;{{#useSwashbuckle}}
 using Swashbuckle.AspNetCore.SwaggerGen;{{/useSwashbuckle}}
 using Newtonsoft.Json;
 using System.ComponentModel.DataAnnotations;
-using SmintIo.Core.Attributes;
-using SmintIo.Core.Result;
+using ReinhardHolzner.HCore.Attributes;
+using ReinhardHolzner.HCore.Result;
 using {{packageName}}.Models;
 
 namespace {{packageName}}.Controllers
