--- a/OpenAPI/Templates/controller.mustache
+++ b/OpenAPI/Templates/controller.mustache
@@ -1,4 +1,5 @@
 {{>partial_header}}
+using System.Net;
 using System.Collections.Generic;
 using System.Threading;
 using System.Threading.Tasks;
@@ -24,7 +25,7 @@ namespace {{packageName}}.Controllers
         /// <remarks>{{notes}}</remarks>{{/notes}}{{#allParams}}
         /// <param name="{{paramName}}">{{description}}</param>{{/allParams}}{{#responses}}
         /// <response code="{{code}}">{{message}}</response>{{/responses}}
-        Task<ApiResult<{{&returnType}}>> {{operationId}}Async({{#allParams}}{{>pathParam}}{{>queryParam}}{{>bodyParam}}{{>formParam}}{{>headerParam}}{{#hasMore}}, {{/hasMore}}{{/allParams}}, CancellationToken cancellationToken = default(CancellationToken));        
+        Task{{#returnType}}<ApiResult<{{&returnType}}>>{{/returnType}}{{^returnType}}{{/returnType}} {{operationId}}Async({{#allParams}}{{>pathParam}}{{>queryParam}}{{>bodyParam}}{{>formParam}}{{>headerParam}}{{#hasMore}}, {{/hasMore}}{{/allParams}}, CancellationToken cancellationToken = default(CancellationToken));        
 	  {{/operation}}
     }
 	
@@ -57,13 +58,20 @@ namespace {{packageName}}.Controllers
         [SwaggerResponse(statusCode: {{code}}, type: typeof({{&dataType}}), description: "{{message}}")]{{/dataType}}{{^dataType}}{{/dataType}}{{/responses}}{{/useSwashbuckle}}
         public async Task<IActionResult> {{operationId}}Async({{#allParams}}{{>pathParam}}{{>queryParam}}{{>bodyParam}}{{>formParam}}{{>headerParam}}{{#hasMore}}, {{/hasMore}}{{/allParams}}, CancellationToken cancellationToken = default(CancellationToken))
         { 	
+			{{#returnType}}
 			var result = await _implementation.{{operationId}}Async({{#allParams}}{{paramName}}{{#hasMore}}, {{/hasMore}}{{/allParams}}, cancellationToken).ConfigureAwait(false);
-					
+			
 			IActionResult response = StatusCode(result.StatusCode, result.Result);            
 			
 			foreach (var header in result.Headers)
                 Request.HttpContext.Response.Headers.Add(header.Key, header.Value.ToString());
-    
+			{{/returnType}}
+			{{^returnType}}
+			await _implementation.{{operationId}}Async({{#allParams}}{{paramName}}{{#hasMore}}, {{/hasMore}}{{/allParams}}, cancellationToken).ConfigureAwait(false);
+			
+			IActionResult response = StatusCode((int)HttpStatusCode.NoContent);
+			{{/returnType}}
+			
             return response;								
         }
         {{/operation}}
