--- a/Core-Identity-PagesUI-Views/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Core-Identity-PagesUI-Views/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+        <form method="post">
             <h4>Registrieren Sie sich als neuer Benutzer.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
@@ -23,9 +23,9 @@
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                <label asp-for="Input.PasswordConfirmation"></label>
+                <input asp-for="Input.PasswordConfirmation" class="form-control" />
+                <span asp-validation-for="Input.PasswordConfirmation" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-default">Register</button>
         </form>
