* Identity auth API v1

--- a/Core-Identity-PagesUI-Views/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Core-Identity-PagesUI-Views/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -5,11 +5,12 @@
 }
 
 <h2>@ViewData["Title"]</h2>
-<h4>Enter your email.</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 col-md-offset-4">
         <form method="post">
+            <h4>Wir senden Ihnen gerne einen Link mit dem Sie Ihr Passwort zurücksetzen können.</h4>
+            <p>Geben Sie bitte Ihre E-Mail Adresse an.</p>
+            <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
