--- a/Core-Identity-PagesUI-Views/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Core-Identity-PagesUI-Views/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h2>@ViewData["Title"]</h2>
-<p>
-    Please check your email to reset your password.
-</p>
+<div class="row">
+    <div class="col-md-4 col-md-offset-4">
+        <h4>Please check your email to reset your password.</h4>
+    </div>
+</div>
 
