--- a/Core-Identity-PagesUI-Views/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Core-Identity-PagesUI-Views/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -21,9 +21,9 @@
                 <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                <label asp-for="Input.NewPasswordConfirmation"></label>
+                <input asp-for="Input.NewPasswordConfirmation" class="form-control" />
+                <span asp-validation-for="Input.NewPasswordConfirmation" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-default">Update password</button>
         </form>
