--- a/Core-Identity-PagesUI-Views/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/Core-Identity-PagesUI-Views/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -1,14 +1,12 @@
 ﻿@page
 @model ResetPasswordModel
 @{
-    ViewData["Title"] = "Reset password";
+    ViewData["Title"] = "Reset your password";
 }
 
 <h2>@ViewData["Title"]</h2>
-<h4>Reset your password.</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 col-md-offset-4">
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <input asp-for="Input.Code" type="hidden" />
@@ -23,9 +21,9 @@
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                <label asp-for="Input.PasswordConfirmation"></label>
+                <input asp-for="Input.PasswordConfirmation" class="form-control" />
+                <span asp-validation-for="Input.PasswordConfirmation" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-default">Reset</button>
         </form>
