--- a/Core-Identity-PagesUI-Views/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/Core-Identity-PagesUI-Views/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -5,6 +5,8 @@
 }
 
 <h2>@ViewData["Title"]</h2>
-<p>
-    Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
-</p>
+<div class="row">
+    <div class="col-md-4 col-md-offset-4">
+        <h4>Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.</h4>
+    </div>
+</div>
