--- a/Core-Identity-PagesUI-Views/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/Core-Identity-PagesUI-Views/Areas/Identity/Pages/Account/Logout.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Log out";
 }
 
-<header>
-    <h1>@ViewData["Title"]</h1>
-    <p>You have successfully logged out of the application.</p>
-</header>
+<h2>@ViewData["Title"]</h2>
+<div class="row">
+    <div class="col-md-4 col-md-offset-4">
+        <h4>You have successfully logged out of the application.</h4>
+    </div>
+</div>
