--- a/Core-Identity-PagesUI-Views/Pages/Account/Login.cshtml
+++ b/Core-Identity-PagesUI-Views/Pages/Account/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model LoginModel
+@model ReinhardHolzner.Core.Identity.PagesUI.Classes.Pages.Account.LoginModel
 
 @{
     ViewData["Title"] = "Anmelden";
@@ -23,7 +23,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Input.Password"></label>
-                        <input asp-for="Input.Password" class="form-control" />
+                        <input type="password" autocomplete="off" asp-for="Input.Password" class="form-control" />
                         <span asp-validation-for="Input.Password" class="text-danger"></span>
                     </div>
                     <div class="form-group">
@@ -35,7 +35,8 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-default">Anmelden</button>
+                        <button type="submit" name="action" value="submit" class="btn btn-default">Anmelden</button>
+                        <button name="action" value="cancel" class="btn btn-default cancel">Abbruch</button>                        
                     </div>
                     <div class="form-group">
                         <p>
