--- a/Core-Identity-PagesUI-Views/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Core-Identity-PagesUI-Views/Pages/Account/Manage/ChangePassword.cshtml
@@ -12,17 +12,17 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Input.OldPassword"></label>
-                <input asp-for="Input.OldPassword" class="form-control" />
+                <input type="password" autocomplete="off" asp-for="Input.OldPassword" class="form-control" />
                 <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Input.NewPassword"></label>
-                <input asp-for="Input.NewPassword" class="form-control" />
+                <input type="password" autocomplete="off" asp-for="Input.NewPassword" class="form-control" />
                 <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Input.NewPasswordConfirmation"></label>
-                <input asp-for="Input.NewPasswordConfirmation" class="form-control" />
+                <input type="password" autocomplete="off" asp-for="Input.NewPasswordConfirmation" class="form-control" />
                 <span asp-validation-for="Input.NewPasswordConfirmation" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-default">Update password</button>
