* Package ref fixes

--- a/OpenAPI/Templates/controller.mustache
+++ b/OpenAPI/Templates/controller.mustache
@@ -7,8 +7,8 @@ using Microsoft.AspNetCore.Mvc;{{#useSwashbuckle}}
 using Swashbuckle.AspNetCore.SwaggerGen;{{/useSwashbuckle}}
 using Newtonsoft.Json;
 using System.ComponentModel.DataAnnotations;
-using ReinhardHolzner.Core.Web.Attributes;
-using ReinhardHolzner.Core.Web.Result;
+using HCore.Web.Attributes;
+using HCore.Web.Result;
 using {{packageName}}.Models;
 
 namespace {{packageName}}.Controllers
