--- a/OpenAPI/Templates/controller.mustache
+++ b/OpenAPI/Templates/controller.mustache
@@ -11,6 +11,8 @@ using HCore.Web.Attributes;
 using HCore.Web.Result;
 using Microsoft.AspNetCore.Authorization;
 using HCore.Identity;
+using Microsoft.AspNetCore.Http;
+using System.Security.Claims;
 using {{packageName}}.Models;
 
 namespace {{packageName}}.Controllers
@@ -27,7 +29,7 @@ namespace {{packageName}}.Controllers
         /// <remarks>{{notes}}</remarks>{{/notes}}{{#allParams}}
         /// <param name="{{paramName}}">{{description}}</param>{{/allParams}}{{#responses}}
         /// <response code="{{code}}">{{message}}</response>{{/responses}}
-        Task{{#returnType}}<ApiResult<{{&returnType}}>>{{/returnType}}{{^returnType}}{{/returnType}} {{operationId}}Async({{#allParams}}{{>pathParam}}{{>queryParam}}{{>bodyParam}}{{>formParam}}{{>headerParam}}, {{/allParams}}CancellationToken cancellationToken = default(CancellationToken));        
+        Task{{#returnType}}<ApiResult<{{&returnType}}>>{{/returnType}}{{^returnType}}{{/returnType}} {{operationId}}Async({{#allParams}}{{>pathParam}}{{>queryParam}}{{>bodyParam}}{{>formParam}}{{>headerParam}}, {{/allParams}}long? developerUuid, string authorizedUserUuid, CancellationToken cancellationToken = default(CancellationToken));        
 	  {{/operation}}
     }
 	
@@ -60,8 +62,14 @@ namespace {{packageName}}.Controllers
         [SwaggerResponse(statusCode: {{code}}, type: typeof({{&dataType}}), description: "{{message}}")]{{/dataType}}{{^dataType}}{{/dataType}}{{/responses}}{{/useSwashbuckle}}
         public async Task<IActionResult> {{operationId}}Async({{#allParams}}{{>pathParam}}{{>queryParam}}{{>bodyParam}}{{>formParam}}{{>headerParam}}, {{/allParams}}CancellationToken cancellationToken = default(CancellationToken))
         { 	
-			{{#returnType}}
-			var result = await _implementation.{{operationId}}Async({{#allParams}}{{paramName}}, {{/allParams}}cancellationToken).ConfigureAwait(false);
+			var authorizedUserUuid = User.GetUserUuid();
+			
+			var tenantInfo = HttpContext.GetTenantInfo();
+
+            long? developerUuid = tenantInfo?.DeveloperUuid;
+			
+			{{#returnType}}			
+			var result = await _implementation.{{operationId}}Async({{#allParams}}{{paramName}}, {{/allParams}}developerUuid, authorizedUserUuid, cancellationToken).ConfigureAwait(false);
 			
 			IActionResult response = StatusCode(result.StatusCode, result.Result);            
 			
@@ -69,7 +77,7 @@ namespace {{packageName}}.Controllers
                 Request.HttpContext.Response.Headers.Add(header.Key, header.Value.ToString());
 			{{/returnType}}
 			{{^returnType}}
-			await _implementation.{{operationId}}Async({{#allParams}}{{paramName}}, {{/allParams}}cancellationToken).ConfigureAwait(false);
+			await _implementation.{{operationId}}Async({{#allParams}}{{paramName}}, {{/allParams}}developerUuid, authorizedUserUuid, cancellationToken).ConfigureAwait(false);
 			
 			IActionResult response = StatusCode((int)HttpStatusCode.NoContent);
 			{{/returnType}}
