* Add user first and last name to identity * Configuration options for identity * Fix some state bugs on user manage interface * Introduce separate identity configuration

--- a/HCore-Identity-PagesUI-Views/Pages/Account/Login.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/Login.cshtml
@@ -42,9 +42,12 @@
                         <p>
                             <a asp-page="./ForgotPassword">Passwort vergessen?</a>
                         </p>
-                        <p>
-                            <a asp-page="./Register">Als neuer Benutzer registrieren</a>
-                        </p>
+                        @if (configuration.SelfRegistration)
+                        {
+                            <p>
+                                <a asp-page="./Register">Als neuer Benutzer registrieren</a>
+                            </p>
+                        }
                     </div>
                 </form>
             </section>
