--- a/HCore-Identity-PagesUI-Views/Pages/_ViewImports.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using HCore.Identity.PagesUI.Classes.Pages
 @namespace HCore.Identity.PagesUI.Views.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@inject IIdentityServicesConfiguration configuration
