--- a/HCore-Identity-PagesUI-Views/Pages/Account/Manage/Index.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/Manage/Index.cshtml
@@ -27,12 +27,34 @@
                     <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">Send verification email</button>
                 }
             </div>
-            <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-default">Save</button>
+            
+            @if (configuration.SelfManagement && configuration.ManageName)
+            {
+                <div class="form-group">
+                    <label asp-for="Input.FirstName"></label>
+                    <input asp-for="Input.FirstName" class="form-control" />
+                    <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.LastName"></label>
+                    <input asp-for="Input.LastName" class="form-control" />
+                    <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                </div>
+            }
+
+            @if (configuration.SelfManagement && configuration.ManagePhoneNumber)
+            {
+                <div class="form-group">
+                    <label asp-for="Input.PhoneNumber"></label>
+                    <input asp-for="Input.PhoneNumber" class="form-control" />
+                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                </div>
+            }
+
+            @if (configuration.SelfManagement && (configuration.ManageName || configuration.ManagePhoneNumber))
+            {
+                <button type="submit" class="btn btn-default">Save</button>
+            }
         </form>
     </div>
 </div>
