--- a/HCore-Identity-PagesUI-Views/Pages/Account/Register.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/Register.cshtml
@@ -16,6 +16,19 @@
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
+            @if (configuration.RegisterName)
+            {
+                <div class="form-group">
+                    <label asp-for="Input.FirstName"></label>
+                    <input asp-for="Input.FirstName" class="form-control" />
+                    <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.LastName"></label>
+                    <input asp-for="Input.LastName" class="form-control" />
+                    <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                </div>
+            }
             <div class="form-group">
                 <label asp-for="Input.Password"></label>
                 <input type="password" autocomplete="off" asp-for="Input.Password" class="form-control" />
@@ -26,6 +39,14 @@
                 <input type="password" autocomplete="off" asp-for="Input.PasswordConfirmation" class="form-control" />
                 <span asp-validation-for="Input.PasswordConfirmation" class="text-danger"></span>
             </div>
+            @if (configuration.RegisterPhoneNumber)
+            {
+                <div class="form-group">
+                    <label asp-for="Input.PhoneNumber"></label>
+                    <input asp-for="Input.PhoneNumber" class="form-control" />
+                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                </div>
+            }
             <button type="submit" class="btn btn-default">Register</button>
         </form>
     </div>
