* Translate identity UI, and fix formatting

--- a/HCore-Identity-PagesUI-Views/Pages/Account/EmailNotConfirmed.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/EmailNotConfirmed.cshtml
@@ -1,17 +1,15 @@
 ﻿@page
 @model EmailNotConfirmedModel
 @{
-    ViewData["Title"] = "Please confirm your Email Address";
+    ViewData["Title"] = Messages.email_not_confirmed_title;
 }
 
-<h2>@ViewData["Title"]</h2>
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
         <form method="post">
-            <h4>Bitte bestätigen Sie Ihre Email-Adresse.</h4>
-            <p>Wir haben einen Link an Ihre Email-Adresse gesendet. Bitte klicken Sie auf diesen Link um Ihre Email-Adresse zu bestätigen.</p>
-            <hr />            
-            <button type="submit" class="btn btn-default">Bestätigungs-Email erneut senden</button>            
+            <h4>@Messages.email_not_confirmed_header</h4>
+            <p>@Messages.email_not_confirmed_header_text</p>                    
+            <button type="submit" class="btn btn-default">@Messages.email_not_confirmed_button_resend</button>            
         </form>
     </div>
 </div>
