--- a/HCore-Identity-PagesUI-Views/Pages/Account/Manage/_ManageNav.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
 ﻿<ul class="nav nav-pills nav-stacked">
-    <li class="@ManageNavPages.IndexNavClass(ViewContext)"><a asp-page="./Index">Profile</a></li>
-    <li class="@ManageNavPages.ChangePasswordNavClass(ViewContext)"><a id="change-password" asp-page="./ChangePassword">Password</a></li>    
+    <li class="@ManageNavPages.IndexNavClass(ViewContext)"><a asp-page="./Index">@Messages.manage_account_profile_link</a></li>
+    <li class="@ManageNavPages.ChangePasswordNavClass(ViewContext)"><a id="change-password" asp-page="./ChangePassword">@Messages.manage_account_password_link</a></li>    
 </ul>
