--- a/HCore-Identity-PagesUI-Views/Pages/Account/AccessDenied.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/AccessDenied.cshtml
@@ -1,12 +1,12 @@
 ﻿@page
 @model AccessDeniedModel
 @{
-    ViewData["Title"] = "Access Denied";
+    ViewData["Title"] = Messages.access_to_page_denied_title;
 }
 
-<h2>@ViewData["Title"]</h2>
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <h4>Sorry, but you do not have permissions to view this page.</h4>
+        <h4>@Messages.access_to_page_denied_header</h4>
+        <p>@Messages.access_to_page_denied_header_text</p>
     </div>
 </div>
