--- a/HCore-Identity-PagesUI-Views/Pages/Account/ConfirmEmail.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/ConfirmEmail.cshtml
@@ -1,12 +1,13 @@
 ﻿@page
 @model ConfirmEmailModel
 @{
-    ViewData["Title"] = "Bestätigung";
+    ViewData["Title"] = Messages.confirm_email_title;
 }
 
-<h2>@ViewData["Title"]</h2>
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <h4>Vielen Dank, Sie haben Ihre E-Mail-Adresse nun bestätigt.</h4>
+        <h4>@Messages.confirm_email_header</h4>
+        <p>@Messages.confirm_email_header_text</p>
+        <p>@Messages.confirm_email_header_text_prefix <a asp-page="./Login">@Messages.confirm_email_header_text_link</a>@Messages.confirm_email_header_text_suffix</p></p>
     </div>
 </div>
