--- a/HCore-Identity-PagesUI-Views/Pages/Account/EmailConfirmationSent.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/EmailConfirmationSent.cshtml
@@ -1,13 +1,14 @@
 ﻿@page
 @model EmailConfirmationSentModel
 @{
-    ViewData["Title"] = "Email confirmation sent";
+    ViewData["Title"] = Messages.email_confirmation_sent_title;
 }
 
-<h2>@ViewData["Title"]</h2>
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <h4>Please check your email to confirm your email address. Please <a asp-page="./Login">click here to log in</a>.</h4>
+        <h4>@Messages.email_confirmation_sent_header</h4>
+        <p>@Messages.email_confirmation_sent_header_text</p>
+        <p>@Messages.email_confirmation_sent_header_text_prefix <a asp-page="./Login">@Messages.email_confirmation_sent_header_text_link</a>@Messages.email_confirmation_send_header_text_suffix</p>
     </div>
 </div>
 
