--- a/HCore-Identity-PagesUI-Views/Pages/Account/ForgotPassword.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/ForgotPassword.cshtml
@@ -1,23 +1,21 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = Messages.forgot_password_title;
 }
 
-<h2>@ViewData["Title"]</h2>
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <form method="post">
-            <h4>Wir senden Ihnen gerne einen Link mit dem Sie Ihr Passwort zurücksetzen können.</h4>
-            <p>Geben Sie bitte Ihre E-Mail Adresse an.</p>
+        <form method="post">            
+            <h4>@Messages.forgot_password_header</h4>
+            <p>@Messages.forgot_password_header_text</p>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default">@Messages.button_submit</button>
         </form>
     </div>
 </div>
