--- a/HCore-Identity-PagesUI-Views/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,14 @@
 ﻿@page
 @model ForgotPasswordConfirmationModel
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = Messages.forgot_password_confirmation_title;
 }
 
-<h2>@ViewData["Title"]</h2>
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <h4>Please check your email to reset your password.</h4>
+        <h4>@Messages.forgot_password_confirmation_header</h4>
+        <p>@Messages.forgot_password_confirmation_header_text</p>
+        <p>@Messages.forgot_password_confirmation_header_text_prefix <a asp-page="./Login">@Messages.forgot_password_confirmation_header_text_link</a>@Messages.forgot_password_confirmation_header_text_suffix</p></p>
     </div>
 </div>
 
