--- a/HCore-Identity-PagesUI-Views/Pages/Account/Login.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/Login.cshtml
@@ -2,29 +2,27 @@
 @model HCore.Identity.PagesUI.Classes.Pages.Account.LoginModel
 
 @{
-    ViewData["Title"] = "Anmelden";
+    ViewData["Title"] = Messages.sign_in_title;
 }
 
-<h2>@ViewData["Title"]</h2>
 <div class="row">
     @if (Model.EnableLocalLogin)
     {
         <div class="col-md-4 col-md-offset-4">
             <section>
                 <form method="post">
-                    <h4>Melden Sie sich mit Ihrem Benutzerkonto an.</h4>
+                    <h4>@Messages.sign_in_header</h4>
+                    <p>@Messages.sign_in_header_text</p>
                     <hr />
                     <input type="hidden" asp-for="ReturnUrl" />
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="form-group">
                         <label asp-for="Input.Email"></label>
                         <input asp-for="Input.Email" class="form-control" />
-                        <span asp-validation-for="Input.Email" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Input.Password"></label>
-                        <input type="password" autocomplete="off" asp-for="Input.Password" class="form-control" />
-                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                        <input type="password" autocomplete="off" asp-for="Input.Password" class="form-control" />                       
                     </div>
                     <div class="form-group">
                         <div class="checkbox">
@@ -35,17 +33,17 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <button type="submit" name="action" value="submit" class="btn btn-default">Anmelden</button>
-                        <button name="action" value="cancel" class="btn btn-default cancel">Abbruch</button>                        
+                        <button type="submit" name="action" value="submit" class="btn btn-default">@Messages.button_sign_in</button>
+                        <button name="action" value="cancel" class="btn btn-default cancel">@Messages.button_cancel</button>                        
                     </div>
                     <div class="form-group">
                         <p>
-                            <a asp-page="./ForgotPassword">Passwort vergessen?</a>
+                            <a asp-page="./ForgotPassword">@Messages.sign_in_button_forgot_password</a>
                         </p>
                         @if (configuration.SelfRegistration)
                         {
                             <p>
-                                <a asp-page="./Register">Als neuer Benutzer registrieren</a>
+                                <a asp-page="./Register">@Messages.sign_in_button_register</a>
                             </p>
                         }
                     </div>
@@ -58,7 +56,7 @@
 
         <div class="col-md-4 col-md-offset-4">
             <div class="alert alert-warning">                
-                There are no login schemes configured for this client.
+               @Messages.sign_in_no_login_schemes_text
             </div>
         </div>
     }
