--- a/HCore-Identity-PagesUI-Views/Pages/Account/Logout.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/Logout.cshtml
@@ -8,37 +8,34 @@
         ViewData["signed-out"] = true;
     }
 
-    ViewData["Title"] = "Log out";
+    ViewData["Title"] = Messages.log_out_title;
 }
 
-<h2>@ViewData["Title"]</h2>
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
         @if (!Model.LoggedOut)
         {
-            <h4>Would you like to log out?</h4> 
-            <p>Please click the button below to confirm.</p>
-            <hr />
+            <h4>@Messages.log_out_header</h4> 
+            <p>@Messages.log_out_header_text</p>
             <form asp-page="/Account/Logout" method="post">
                 <input type="hidden" name="logoutId" value="@Model.LogoutId" />
                 <fieldset>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Yes</button>
+                        <button type="submit" class="btn btn-primary">@Messages.button_log_out</button>
                     </div>
                 </fieldset>
             </form>
         }
         else
         {
-            <h4>You are now logged out.</h4>
-            <p>Hope to see you back again soon!</p>
-
+            <h4>@Messages.log_out_confirmed_header</h4>
+            <p>@Messages.log_out_confirmed_header_text</p>
             @if (Model.PostLogoutRedirectUri != null)
             {
-                <hr/>
                 <p>
-                    Click <a class="PostLogoutRedirectUri" href="@Model.PostLogoutRedirectUri">here</a> to return to the
-                    <span>@Model.ClientName</span> application.
+                    @Messages.log_out_confirmed_redirect_text_prefix 
+                    <a class="PostLogoutRedirectUri" href="@Model.PostLogoutRedirectUri">@Messages.log_out_confirmed_redirect_text_link</a> 
+                    @Messages.log_out_confirmed_redirect_text_suffix
                 </p>
             }
 
