--- a/HCore-Identity-PagesUI-Views/Pages/Account/Manage/ChangePassword.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/Manage/ChangePassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ChangePasswordModel
 @{
-    ViewData["Title"] = "Change password";
+    ViewData["Title"] = Messages.change_password_title;
 }
 
 <h4>@ViewData["Title"]</h4>
@@ -13,19 +13,16 @@
             <div class="form-group">
                 <label asp-for="Input.OldPassword"></label>
                 <input type="password" autocomplete="off" asp-for="Input.OldPassword" class="form-control" />
-                <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Input.NewPassword"></label>
                 <input type="password" autocomplete="off" asp-for="Input.NewPassword" class="form-control" />
-                <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Input.NewPasswordConfirmation"></label>
                 <input type="password" autocomplete="off" asp-for="Input.NewPasswordConfirmation" class="form-control" />
-                <span asp-validation-for="Input.NewPasswordConfirmation" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Update password</button>
+            <button type="submit" class="btn btn-default">@Messages.change_password_button_text</button>
         </form>
     </div>
 </div>
