--- a/HCore-Identity-PagesUI-Views/Pages/Account/Manage/Index.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/Manage/Index.cshtml
@@ -1,13 +1,11 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Profile";
+    ViewData["Title"] = Messages.profile_title;
 }
 
 <h4>@ViewData["Title"]</h4>
-
 @await Html.PartialAsync("_StatusMessage", Model.StatusMessage).ConfigureAwait(false)
-
 <div class="row">
     <div class="col-md-6">
         <form id="profile-form" method="post">
@@ -24,7 +22,7 @@
                 else
                 {
                     <input asp-for="Input.Email" class="form-control" disabled />
-                    <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">Send verification email</button>
+                    <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">@Messages.profile_resend_verification_email_link</button>
                 }
             </div>
             
@@ -33,12 +31,10 @@
                 <div class="form-group">
                     <label asp-for="Input.FirstName"></label>
                     <input asp-for="Input.FirstName" class="form-control" />
-                    <span asp-validation-for="Input.FirstName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Input.LastName"></label>
                     <input asp-for="Input.LastName" class="form-control" />
-                    <span asp-validation-for="Input.LastName" class="text-danger"></span>
                 </div>
             }
 
@@ -47,13 +43,12 @@
                 <div class="form-group">
                     <label asp-for="Input.PhoneNumber"></label>
                     <input asp-for="Input.PhoneNumber" class="form-control" />
-                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
                 </div>
             }
 
             @if (configuration.SelfManagement && (configuration.ManageName || configuration.ManagePhoneNumber))
             {
-                <button type="submit" class="btn btn-default">Save</button>
+                <button type="submit" class="btn btn-default">@Messages.button_save</button>
             }
         </form>
     </div>
