--- a/HCore-Identity-PagesUI-Views/Pages/Account/Manage/_Layout.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/Manage/_Layout.cshtml
@@ -2,10 +2,10 @@
     Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-<h2>Manage your account</h2>
+<h4>@Messages.manage_account_header</h4>
 
 <div>
-    <h4>Change your account settings</h4>
+    <p>@Messages.manage_account_subheader</p>
     <hr />
     <div class="row">
         <div class="col-md-3">
