--- a/HCore-Identity-PagesUI-Views/Pages/Account/Register.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/Register.cshtml
@@ -1,53 +1,47 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Registrieren";
+    ViewData["Title"] = Messages.register_title;
 }
 
-<h2>@ViewData["Title"]</h2>
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
         <form method="post">
-            <h4>Registrieren Sie sich als neuer Benutzer.</h4>
+            <h4>@Messages.register_header</h4>
+            <p>@Messages.register_header_text</p>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             @if (configuration.RegisterName)
             {
                 <div class="form-group">
                     <label asp-for="Input.FirstName"></label>
-                    <input asp-for="Input.FirstName" class="form-control" />
-                    <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                    <input asp-for="Input.FirstName" class="form-control" />                    
                 </div>
                 <div class="form-group">
                     <label asp-for="Input.LastName"></label>
-                    <input asp-for="Input.LastName" class="form-control" />
-                    <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                    <input asp-for="Input.LastName" class="form-control" />                    
                 </div>
             }
             <div class="form-group">
                 <label asp-for="Input.Password"></label>
-                <input type="password" autocomplete="off" asp-for="Input.Password" class="form-control" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
+                <input type="password" autocomplete="off" asp-for="Input.Password" class="form-control" />                
             </div>
             <div class="form-group">
                 <label asp-for="Input.PasswordConfirmation"></label>
-                <input type="password" autocomplete="off" asp-for="Input.PasswordConfirmation" class="form-control" />
-                <span asp-validation-for="Input.PasswordConfirmation" class="text-danger"></span>
+                <input type="password" autocomplete="off" asp-for="Input.PasswordConfirmation" class="form-control" />                
             </div>
             @if (configuration.RegisterPhoneNumber)
             {
                 <div class="form-group">
                     <label asp-for="Input.PhoneNumber"></label>
-                    <input asp-for="Input.PhoneNumber" class="form-control" />
-                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                    <input asp-for="Input.PhoneNumber" class="form-control" />                    
                 </div>
             }
-            <button type="submit" class="btn btn-default">Register</button>
+            <button type="submit" class="btn btn-default">@Messages.button_register</button>
         </form>
     </div>
 </div>
