--- a/HCore-Identity-PagesUI-Views/Pages/Account/ResetPassword.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/ResetPassword.cshtml
@@ -1,31 +1,29 @@
 ﻿@page
 @model ResetPasswordModel
 @{
-    ViewData["Title"] = "Reset your password";
+    ViewData["Title"] = Messages.reset_password_title;
 }
 
-<h2>@ViewData["Title"]</h2>
 <div class="row">
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-md-4 col-md-offset-4">        
         <form method="post">
+            <h4>@Messages.reset_password_header</h4>
+            <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <input asp-for="Input.Code" type="hidden" />
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+                <input asp-for="Input.Email" class="form-control" />                
             </div>
             <div class="form-group">
                 <label asp-for="Input.Password"></label>
-                <input type="password" autocomplete="off" asp-for="Input.Password" class="form-control" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
+                <input type="password" autocomplete="off" asp-for="Input.Password" class="form-control" />                
             </div>
             <div class="form-group">
                 <label asp-for="Input.PasswordConfirmation"></label>
-                <input type="password" autocomplete="off" asp-for="Input.PasswordConfirmation" class="form-control" />
-                <span asp-validation-for="Input.PasswordConfirmation" class="text-danger"></span>
+                <input type="password" autocomplete="off" asp-for="Input.PasswordConfirmation" class="form-control" />                
             </div>
-            <button type="submit" class="btn btn-default">Reset</button>
+            <button type="submit" class="btn btn-default">@Messages.button_reset_password</button>
         </form>
     </div>
 </div>
