--- a/HCore-Identity-PagesUI-Views/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -1,12 +1,13 @@
 ﻿@page
 @model ResetPasswordConfirmationModel
 @{
-    ViewData["Title"] = "Reset password confirmation";
+    ViewData["Title"] = Messages.reset_password_confirmation_title;
 }
 
-<h2>@ViewData["Title"]</h2>
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <h4>Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.</h4>
+        <h4>@Messages.reset_password_confirmation_header</h4>
+        <p>@Messages.reset_password_confirmation_header_text</p>
+        <p>@Messages.reset_password_confirmation_header_text_prefix <a asp-page="./Login">@Messages.reset_password_confirmation_header_text_link</a>@Messages.reset_password_confirmation_header_text_suffix</p>
     </div>
 </div>
