--- a/HCore-Identity-PagesUI-Views/Pages/_ViewImports.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using HCore.Identity.PagesUI.Classes.Pages
+@using HCore.Identity.Resources
 @namespace HCore.Identity.PagesUI.Views.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject IIdentityServicesConfiguration configuration
