--- a/HCore-Identity-PagesUI-Views/Pages/_ViewImports.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/_ViewImports.cshtml
@@ -3,4 +3,4 @@
 @using HCore.Identity.Resources
 @namespace HCore.Identity.PagesUI.Views.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@inject IIdentityServicesConfiguration configuration
+@inject HCore.Identity.IConfiguration configuration
