* Fix openAPI generator for caching * Add cache invalidation

--- a/OpenAPI/Templates/model.mustache
+++ b/OpenAPI/Templates/model.mustache
@@ -17,6 +17,7 @@ namespace {{packageName}}.Models
     /// </summary>
     [DataContract]
     [NotMapped]
+    [Serializable]
 	public partial class {{classname}} : {{#parent}}{{{parent}}}, {{/parent}}IEquatable<{{classname}}>
     { {{#vars}}{{#isEnum}}{{>enumClass}}{{/isEnum}}{{#items.isEnum}}{{#items}}{{>enumClass}}{{/items}}{{/items.isEnum}}
         {{#isEnum}}
