* Further WIP on OIDC SSO

--- a/HCore-Identity-PagesUI-Views/Pages/Account/Manage/ChangePassword.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/Manage/ChangePassword.cshtml
@@ -5,27 +5,43 @@
 }
 
 <h4>@ViewData["Title"]</h4>
-@Html.Partial("_StatusMessage", Model.StatusMessage)
-<div class="row">
-    <div class="col-md-6">
-        <form id="change-password-form" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.OldPassword"></label>
-                <input type="password" autocomplete="off" asp-for="Input.OldPassword" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.NewPassword"></label>
-                <input type="password" autocomplete="off" asp-for="Input.NewPassword" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.NewPasswordConfirmation"></label>
-                <input type="password" autocomplete="off" asp-for="Input.NewPasswordConfirmation" class="form-control" />
-            </div>
-            <button type="submit" class="btn btn-default">@Messages.change_password_button_text</button>
-        </form>
+@if (Model.PasswordChangePossible)
+{
+    @await Html.PartialAsync("_StatusMessage", Model.StatusMessage).ConfigureAwait(false);
+    <div class="row">
+        <div class="col-md-6">
+            <form id="change-password-form" method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Input.OldPassword"></label>
+                    <input type="password" autocomplete="off" asp-for="Input.OldPassword" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.NewPassword"></label>
+                    <input type="password" autocomplete="off" asp-for="Input.NewPassword" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.NewPasswordConfirmation"></label>
+                    <input type="password" autocomplete="off" asp-for="Input.NewPasswordConfirmation" class="form-control" />
+                </div>
+                <button type="submit" class="btn btn-default">@Messages.change_password_button_text</button>
+            </form>
+        </div>
     </div>
-</div>
+}
+else
+{
+    <div class="row">
+        <div class="col-md-6">
+            @await Html.PartialAsync("_StatusMessage", Model.StatusMessage).ConfigureAwait(false)
+            <div class="row">
+                <div class="col-md-12">
+                    @Messages.change_password_not_possible
+                </div>
+            </div>
+        </div>
+    </div>
+}
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
