Compile time porting to NET 6 - not yet tested

--- a/HCore-Identity-PagesUI-Views/Pages/Account/ForgotPassword.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/ForgotPassword.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @using reCAPTCHA.AspNetCore
 @using System.Threading
+@using reCAPTCHA.AspNetCore.Versions
 @model ForgotPasswordModel
 @{
     ViewData["Title"] = Messages.forgot_password_title;
@@ -27,7 +28,9 @@
 
             @if (Model.Recaptcha != null)
             {
-                @Html.Recaptcha(Model.Recaptcha, language: Thread.CurrentThread.CurrentUICulture.TwoLetterISOLanguageName);
+                @Html.Recaptcha(Model.Recaptcha, new RecaptchaV2Checkbox {
+                    Language = Thread.CurrentThread.CurrentUICulture.TwoLetterISOLanguageName
+                });
             }
 
             <button type="submit" class="btn btn-default">@Messages.button_submit</button>
