--- a/HCore-PagesUI-Views/Pages/Error.cshtml
+++ b/HCore-PagesUI-Views/Pages/Error.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @using Microsoft.AspNetCore.Hosting
 @model ErrorModel
-@inject IHostingEnvironment host
+@inject IWebHostEnvironment host
 @{
     ViewData["Title"] = Messages.error_title;
 }
